--- a/kotlin/GlobalSolution2/app/src/main/res/layout/activity_main.xml
+++ b/kotlin/GlobalSolution2/app/src/main/res/layout/activity_main.xml
@@ -17,4 +17,24 @@
         app:layout_constraintTop_toTopOf="parent"
         android:text="Listar Pacientes" />
 
+    <Button
+        android:id="@+id/btnCadastrarPaciente"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btnListarPacientes"
+        android:layout_centerHorizontal="true"
+        app:layout_constraintTop_toBottomOf="@id/btnCadastrarPaciente"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="16dp"
+        android:text="Cadastrar Paciente" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toBottomOf="@id/btnCadastrarPaciente"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
