--- a/kotlin/GlobalSolution2/app/src/main/res/layout/item_paciente_view.xml
+++ b/kotlin/GlobalSolution2/app/src/main/res/layout/item_paciente_view.xml
@@ -19,5 +19,13 @@
             android:layout_height="wrap_content"
             android:text="Idade: " />
 
+    <Button
+        android:id="@+id/btnCadastrarPaciente"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btnListarPacientes"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:text="Cadastrar Paciente" />
     </LinearLayout>
 
