--- a/kotlin/gskotlin/app/src/main/res/layout/activity_cadastro_paciente.xml
+++ b/kotlin/gskotlin/app/src/main/res/layout/activity_cadastro_paciente.xml
@@ -1,25 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <LinearLayout
+        android:id="@+id/headerLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/lightblue"
+        android:padding="16dp"
+        android:gravity="center">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="PacientePRO"
+            android:textSize="24sp"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"/>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/txtTituloCadastrarPaciente"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cadastrar Paciente"
+        android:textSize="18sp"
+        android:textColor="@color/darkblue"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/headerLayout"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputNome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Nome"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/darkblue"
+        app:layout_constraintTop_toBottomOf="@id/txtTituloCadastrarPaciente"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"
-        >
+        android:layout_margin="16dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textInputEditTextNome"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
+            android:layout_height="wrap_content"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -28,17 +57,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Idade"
-        android:layout_marginTop="16dp"
+        android:textColor="@color/darkblue"
         app:layout_constraintTop_toBottomOf="@id/textInputNome"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        >
+        android:layout_margin="16dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textInputEditTextIdade"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
+            android:layout_height="wrap_content"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -47,17 +75,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Email"
-        android:layout_marginTop="16dp"
+        android:textColor="@color/darkblue"
         app:layout_constraintTop_toBottomOf="@id/textInputLayoutIdade"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        >
+        android:layout_margin="16dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textInputEditTextEmail"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
+            android:layout_height="wrap_content"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -66,19 +93,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Telefone"
-        android:layout_marginTop="16dp"
+        android:textColor="@color/darkblue"
         app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmail"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        >
+        android:layout_margin="16dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textInputEditTextTelefone"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
+            android:layout_height="wrap_content"/>
 
     </com.google.android.material.textfield.TextInputLayout>
+
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnCadastrar"
@@ -89,16 +116,18 @@
         app:layout_constraintTop_toBottomOf="@id/textInputLayoutTelefone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:backgroundTint="@color/darkblue"
         />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnVoltarInicio"
+        android:backgroundTint="@color/lightblue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Voltar para tela inicial"
+        android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
