--- a/kotlin/gskotlin/app/src/main/res/values/colors.xml
+++ b/kotlin/gskotlin/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="skyblue">#48CAE4</color>
+    <color name="darkblue">#03045E</color>
+    <color name="lightblue">#ADE8F4</color>
 </resources>
